IGNITE-22835 Shared disruptor wip.